welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:14: error: '(' expected but identifier found.
  while estTrie {
        ^noTriples:20: error: illegal start of simple expression
}
^